fix for message filter plus icon on mobile

--- a/source/css/scss-altinnett/objects/_dashboard.scss
+++ b/source/css/scss-altinnett/objects/_dashboard.scss
@@ -4,7 +4,7 @@
 
 .a-filter-add-button {
   @extend .a-btn-icon;
-  min-height: 32px;
+  min-height: 24px;
   margin-top: 1px;
 }
 
